# migaku-supabase

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: sync.yml
migaku_supabase/: __init__.py  __main__.py  cli.py  config.py  export.py  models.py  state.py  supabase_client.py
migaku_supabase/commands/: chars_cmd.py  export_cmd.py  init_db_cmd.py  login_cmd.py  rebuild_cache_cmd.py  setup_cmd.py  status_cmd.py  sync_cmd.py
migaku_supabase/migaku/: auth.py  dict.py  enrichment.py  frequency.py  pull.py  push.py
supabase/: schema.sql
