[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "migaku-supabase"
version = "0.1.0"
description = "Sync Migaku vocabulary into a Supabase Postgres table."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "requests>=2.32,<3",
  "python-dotenv>=1.0,<2",
  "pypinyin>=0.50,<1",
  "psycopg[binary]>=3.2,<4",
  "openpyxl>=3.1,<4",
]

[project.scripts]
migaku-supabase = "migaku_supabase.cli:main"

[tool.setuptools.packages.find]
include = ["migaku_supabase*"]
